crates/contrib/schematic_types/tests/snapshots/builder_test__arrays-3.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Array",
    "items_type": {
      "ty": {
        "type": "String"
      }
    },
    "max_length": 3,
    "min_length": 3
  }
}
