crates/contrib/schematic_types/tests/snapshots/builder_test__arrays-4.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Array",
    "items_type": {
      "ty": {
        "type": "String"
      }
    },
    "unique": true
  }
}
