crates/contrib/schematic_types/tests/snapshots/builder_test__integers-2.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Integer",
    "kind": "I32"
  }
}
