crates/contrib/schematic_types/tests/snapshots/builder_test__primitives-6.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Union",
    "partial": false,
    "operator": "AnyOf",
    "variants_types": [
      {
        "ty": {
          "type": "Boolean"
        }
      },
      {
        "ty": {
          "type": "Null"
        }
      }
    ]
  }
}
