crates/contrib/schematic_types/tests/snapshots/builder_test__primitives.snap
---
source: crates/contrib/schematic_types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Null"
  }
}
